Worked on image cropping issue and search image hover issue

--- a/assets/scss/f/_hero.scss
+++ b/assets/scss/f/_hero.scss
@@ -135,7 +135,8 @@ $carousel-arrow-next:              url("data:image/svg+xml;charset=utf8,%3Csvg x
 
 .heroCarousel-image {
     @include breakpoint("medium") {
-        height: 100%;
+        //height: 100%;
+        height: auto !important;
     }
 }
 
